--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -15,3 +15,4 @@ message(STATUS "Bison executable: ${BISON_EXECUTABLE}")
 include_directories( "." )
 include_directories( "${CMAKE_CURRENT_BINARY_DIR}" )
 add_executable(test-bison ${BISON_test-bison_OUTPUTS})
+target_link_libraries(test-bison m)
